Fix challenge-card top section padding to accomodae letter spacing

--- a/app/src/components/challenge-card/style.sass
+++ b/app/src/components/challenge-card/style.sass
@@ -14,8 +14,8 @@
   & > *:first-child
     text-transform: uppercase
     letter-spacing: .3em
+    padding: .75em 0 .75em .3em
     font-size: 1em
-    padding: .75em
     text-align: center
     flex: 0 0
 
